Better color and fix colors of code elements with links

--- a/website/public/style.css
+++ b/website/public/style.css
@@ -21,7 +21,7 @@ article {
   font-family: TGCFont, sans-serif;
 }
 
-.chakra-text a {
+.chakra-text * {
   font-weight: 500;
-  color: blue;
+  color: #5023ff;
 }
