--- a/website/public/style.css
+++ b/website/public/style.css
@@ -21,7 +21,13 @@ article {
   font-family: TGCFont, sans-serif;
 }
 
-.chakra-text * {
+.chakra-link *,
+.chakra-link {
   font-weight: 500;
-  color: #5023ff;
+  color: var(--chakra-colors-blue-200) !important;
+}
+
+.chakra-ui-light .chakra-link *,
+.chakra-ui-light .chakra-link {
+  color: var(--chakra-colors-blue-600) !important;
 }
