--- a/website/public/style.css
+++ b/website/public/style.css
@@ -20,3 +20,14 @@ article {
 #__next {
   font-family: TGCFont, sans-serif;
 }
+
+.chakra-link *,
+.chakra-link {
+  font-weight: 500;
+  color: var(--chakra-colors-blue-200) !important;
+}
+
+.chakra-ui-light .chakra-link *,
+.chakra-ui-light .chakra-link {
+  color: var(--chakra-colors-blue-600) !important;
+}
