Add credit on top

--- a/packages/graphiql/src/dark-mode.css
+++ b/packages/graphiql/src/dark-mode.css
@@ -1,3 +1,4 @@
+/* Taken from https://gist.github.com/bkeating/cfe0d5e72bd3f9f1f77e1a2ff2309972 */
 /* GraphiQL One Dark Alt (Dark Mode) theme by Ben Keating[1]
    * Colors taken from Atom's One Dark theme[2]. Add this file to the end of
    * your <head> block[3] to override built-in default styling.
