GraphiQL and CORS fixes

--- a/packages/graphiql/src/styles.css
+++ b/packages/graphiql/src/styles.css
@@ -40,3 +40,17 @@ html {
   transform: rotate(135deg);
   width: 9px;
 }
+
+.graphiql-explorer-root input {
+  background-color: #282d34 !important;
+  padding-left: 5px;
+}
+
+.graphiql-explorer-actions select {
+  background-color: #282d34 !important;
+  color: white;
+}
+
+.graphiql-explorer-root div:first-child {
+  overflow: auto !important;
+}
