--- a/packages/graphiql/src/styles.css
+++ b/packages/graphiql/src/styles.css
@@ -49,8 +49,13 @@ html {
 .graphiql-explorer-actions select {
   background-color: #282d34 !important;
   color: white;
+  margin-left: 5px;
 }
 
 .graphiql-explorer-root div:first-child {
   overflow: auto !important;
+}
+
+.graphiql-operation-title-bar {
+  background-color: transparent;
 }
