chore: upgrade to latest graphiql

--- a/packages/graphiql/src/dark-mode.css
+++ b/packages/graphiql/src/dark-mode.css
@@ -188,6 +188,10 @@
   color: #ff9f4c;
 }
 
+.graphiql-container .variable-editor-title-text.active {
+  color: white;
+}
+
 .cm-property {
   color: #0083c7;
 }
