--- a/website/public/style.css
+++ b/website/public/style.css
@@ -1,4 +1,4 @@
-code[class*='language-'],
+/* code[class*='language-'],
 pre[class*='language-'] {
   white-space: pre-wrap !important;
   word-break: break-word !important;
@@ -30,4 +30,7 @@ article {
 .chakra-ui-light .chakra-link *,
 .chakra-ui-light .chakra-link {
   color: var(--chakra-colors-blue-600) !important;
-}
+} */
+
+@tailwind components;
+@tailwind utilities;
